# prism-learn

./: .copilotignore  .env.podman.example  .gitignore  .pre-commit-config.yaml  Makefile.pod  README.md  podman-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/agents/: ORCHESTRATOR.agent.md  prism-learn-agent.md
.github/workflows/: ci.yml
.local/db-checkpoints/: pre_restore_20260322_113740.dump  pre_restore_20260322_113808.dump  restore_test_20260315_191516.dump  scan_20260315_191411.dump
.local/tmp/: roles25-refresh-20260322-candidate4_bug_targets.tsv  roles25-refresh-20260322-candidate4_doc_quality.json  roles25-refresh-20260322-candidate4_doc_quality.md  roles25-refresh-20260322-candidate4_promotion_summary.md  roles25-refresh-20260322-candidate4_scanner_bug_list.md  roles25-refresh-20260322-candidate4_section_report.json  roles25-refresh-20260322-candidate4_section_report.md  roles25-refresh-20260322-candidate4_section_report_raw.json  (+30 more)
plans/: modernization-plan-v2.md  readme-documentation-phase-3-complete.md
scripts/: SCRIPTS.md  backup_database.sh  fetch_galaxy_repo_urls.py  learning_alias_helper.py  learning_batch_smoke.py  learning_doc_quality_report.py  learning_feedback_report.py  learning_materialize_sections.py  learning_refresh_triage_report.py  learning_repo_batch.py  learning_resolve_unknowns.py  learning_section_title_report.py  repo_urls.example.txt  repo_urls.sample12.txt  repo_urls.top1000.txt  repo_urls.top100k.txt  restore_database.sh  rotate_summarize.py
tools/: run-rotate.sh
(+22 files in other folders)
