[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-learn"
version = "0.1.0"
description = "Batch learning infrastructure for prism: Postgres-backed role scanning, reporting, and analysis."
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD-3-Clause" }
dependencies = [
  "prism-ansible>=0.1.0",
  "PyYAML>=5.4",
  "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "tox",
  "ruff==0.15.6",
  "black==25.1.0",
  "pre-commit",
]

[project.scripts]
prism-learn-batch = "scripts.learning_repo_batch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
